tests/error/type_match/base_case_null_incomplete_type.bz
// error: unable to match expression of type '__null_t' to '?auto'
function test()
{
	let _: ?auto = null;
}
